# OpenWare

./: CMakeLists.txt  README.md
api/: README.md
api/c/: CMakeLists.txt  api.c  api.h
api/python/: c_api_bridge.py  server.py
assets/: checker.ppm
assets/audio/: README.md
assets/materials/: ground.mat  hero.mat
assets/scripts/: game.lua
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  OpenWareEngine  build.ninja  cmake_install.cmake  compile_commands.json
build_ninja/api/c/: cmake_install.cmake
build_sdl/: CMakeCache.txt  Makefile  OpenWareEngine  cmake_install.cmake
docs/: ENGINE_SYSTEMS.md  INTEGRATION_GUIDE.md  README.md
include/Engine/Audio/: AudioSystem.hpp
include/Engine/Core/: GameState.hpp  Math.hpp  Transform.hpp
include/Engine/Input/: Input.hpp
include/Engine/Physics/: PhysicsSystem.hpp  Rigidbody.hpp
include/Engine/Renderer/: GL.hpp  Material.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp
include/Engine/Resource/: MaterialLoader.hpp  OBJLoader.hpp  TextureLoader.hpp
include/Engine/Scene/: Camera.hpp  Entity.hpp  Light.hpp  Scene.hpp
include/Engine/Script/: LuaScriptSystem.hpp
include/Engine/UI/: AboutUI.hpp  DebugUI.hpp
src/: main.cpp
src/Audio/: AudioSystem.cpp
src/Input/: Input.cpp
src/Physics/: PhysicsSystem.cpp
src/Renderer/: Material.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp
src/Resource/: MaterialLoader.cpp  OBJLoader.cpp  TextureLoader.cpp
src/Scene/: Camera.cpp  Entity.cpp  Scene.cpp
src/Script/: LuaScriptSystem.cpp
src/UI/: AboutUI.cpp  DebugUI.cpp
